# Slug

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  INSTALL.md  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  SLUG-AGENT-GUIDE.md  SLUG-AMAZON-MIC-TEST.md  SLUG-VALIDATION-PROMPT.md  TEST-CHECKLIST-MAC.md
.claude/skills/slug/: SKILL.md
.github/workflows/: ci.yml  release.yml
crates/slug-brain/: Cargo.toml
crates/slug-brain/src/: brain.rs  config.rs  hardware.rs  lib.rs  main.rs  safety.rs  tools.rs
crates/slug-brain/src/backend/: claude.rs  gemini.rs  mod.rs  ollama.rs  openai.rs
crates/slug-bridge/: Cargo.toml
crates/slug-bridge/src/: action.rs  actions.rs  activate.rs  backend.rs  backend_ax.rs  backend_uia.rs  click_flash.rs  coverage.rs  error.rs  events.rs  harvest.rs  launch.rs  lib.rs  synth_linux.rs  synth_macos.rs  synth_windows.rs
crates/slug-bridge/src/backend_atspi/: actions.rs  events.rs  harvest.rs  mapping.rs  mod.rs
crates/slug-bridge/tests/: e2e_gnome_text_editor.rs  live_smoke.rs
crates/slug-cli/: Cargo.toml
crates/slug-cli/src/: main.rs
crates/slug-core/: Cargo.toml
crates/slug-core/src/: alias.rs  capability.rs  delta.rs  document.rs  lib.rs  node.rs  refs.rs  role.rs  safety.rs  state.rs  yaml.rs
crates/slug-core/tests/: snapshot_vs_vision.rs
crates/slug-mcp/: Cargo.toml
crates/slug-mcp/src/: agent.rs  approval.rs  dashboard.html  dashboard_api.rs  lib.rs  main.rs  mcp.rs  server.rs  session.rs
crates/slug-mcp/tests/: protocol.rs
crates/slug-notes/: Cargo.toml
crates/slug-notes/src/: lib.rs  main.rs
crates/slug-notes/tests/: agent_drive.rs
crates/slug-ui/: Cargo.toml
crates/slug-ui-ffi/: Cargo.toml  build.rs  cbindgen.toml
crates/slug-ui-ffi/include/: slug_ui.h
crates/slug-ui-ffi/src/: lib.rs
crates/slug-ui-py/: Cargo.toml
crates/slug-ui-py/src/: lib.rs
crates/slug-ui/schema/: slug_ui.capnp
crates/slug-ui/src/: app.rs  bus.rs  declarative.rs  draw.rs  id.rs  lib.rs  protocol.rs  semantics.rs  tools.rs  widget.rs
docs/: BENCH-vision-vs-slug.md  HARDWARE-TIERING.md  INDEX.md  RISK-REGISTER.md  SEMANTIC-SCHEMA.md  WAYLAND-PROTOCOL.md
slug-install/: README.md  install.ps1  install.sh  make-macos-app.sh  make-macos-dmg.sh
slug-install/windows/: open-dashboard.cmd  slug.iss
