[package]
name = "slug-brain"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
slug-core = { workspace = true }
slug-bridge = { workspace = true }
slug-mcp = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
reqwest = { workspace = true }
sysinfo = { workspace = true }
toml = { workspace = true }
nvml-wrapper = { workspace = true }

[[bin]]
name = "slug-agent"
path = "src/main.rs"

[lib]
name = "slug_brain"
path = "src/lib.rs"
