[package]
name = "slug-bridge"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
slug-core = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }

# Linux: AT-SPI2 over D-Bus.
[target.'cfg(target_os = "linux")'.dependencies]
atspi = { workspace = true }
zbus = { workspace = true }

# Windows: UI Automation via the official Microsoft crate.
[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_Variant",
    "Win32_System_Ole",
    "Win32_UI_Accessibility",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
] }
windows-core = "0.62"

# macOS: the Accessibility (AX) API via the proven accessibility-sys FFI bindings
# + the core-foundation safe wrappers; objc2 AppKit for running-app enumeration.
[target.'cfg(target_os = "macos")'.dependencies]
accessibility-sys = "0.2"
core-foundation = "0.10"
core-foundation-sys = "0.8"
# Synthetic keyboard input (CGEvent) so the agent can drive opaque apps with no
# accessibility tree — key chords + literal text, never a screenshot.
core-graphics = "0.24"
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSString", "NSArray", "NSEnumerator"] }
objc2-app-kit = { version = "0.3", features = ["NSWorkspace", "NSRunningApplication"] }

[dev-dependencies]
anyhow = { workspace = true }

[features]
# Gate live/runtime tests (need a real desktop + a11y permissions) per platform.
live-tests = []
