[package]
name = "slug-notes"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "slug_notes"
path = "src/lib.rs"

[[bin]]
name = "slug-notes"
path = "src/main.rs"

[dependencies]
slug-ui = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
slug-core = { workspace = true }
